[tool.poetry]
name = "aoc23"
version = "0.1.0"
description = ""
authors = ["StigHaraldGustavsen <stighg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numba = "^0.58.1"
matplotlib = "^3.8.2"
pandas = "^2.1.3"
ipykernel = "^6.27.1"
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
